issues: Make Choices :Scroller isn’t working Make Choices : Numbering on table isn’t correct Make Choices : Table is getting distorted on adding data Educational Details: O/A Levels also need to be included on page. Educational Details: User won’t enter percentage, system will calculate by itself. Documents: Only word or pdf formats are allowed System: Page Refreshes should be minimum. (Make Choices) My Profile : My applications aren’t appearing My Profile : My payments aren’t appearing Test_Results: Not Displaying all test

--- a/EducationEverest/css/style.css
+++ b/EducationEverest/css/style.css
@@ -308,3 +308,12 @@ a:hover,a:focus,a:active,a:visited{
 {
 	margin-bottom: 10px;
 }
+.selected_Label
+{
+    font-family: Raleway Medium;
+    font-size: 18px;
+    line-height: 22px;
+    color: #B3B3B3;
+    color: rgb(179, 179, 179);
+}
+}
